<resources>
    <string name="Alarm_open_video">Live-Video When Alarm</string>
    <string name="Allarm_mute">Alarm Mute</string>
    <string name="Allarm_vibrate">Alarm Vibrate</string>
    <string name="Anonymous_login">Anonymous Login</string>
    <string name="CNumber">Account ID</string>
    <string name="Press_again">Press again to exit</string>
    <string name="Press_again_exit">Press again to exit</string>
    <string name="UTC">UTC</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">HiKam is a free App for HiKam Camera, the best-in-class IP camera for home and small business. HiKam adopts the advanced P2P technology to ensure you the most easy, excellent and reliable experience of vedio monitoring, wherever you are and whenever you want. HiKam helps you to take care your family and protect your fortune.</string>
    <string name="about_s">About</string>
    <string name="about_us">About Us</string>
    <string name="about_web">http://www.hi-kam.com</string>
    <string name="accept">Accept</string>
    <string name="accont_name_hint">UserID</string>
    <string name="account">Account</string>
    <string name="account_already_exists_in_mask_list">Shielding account already exists</string>
    <string name="account_email">E-mail</string>
    <string name="account_info">My Account</string>
    <string name="account_no_exist">Account does not exist</string>
    <string name="account_pwd_hint">Input password</string>
    <string name="add">Add</string>
    <string name="add_contact">Add to camera list</string>
    <string name="add_contact_way_show_info">With \"Smart Scan\" and \"AirLink\" you can configure the camera and add it into camera list.\n\nWith \"Lan Scan\" and \"Manual\" you can add the camera into camera list. It works only when the camera is already connected to the internet, via WiFi or LAN-Cable. It is useful, when you want to add the camera on the second smartphone.</string>
    <string name="add_contacts">Add camera</string>
    <string name="add_contants_error">Add camera failed</string>
    <string name="add_contants_success">Add camera successfully</string>
    <string name="add_device">Add Cameras</string>
    <string name="add_device_name_prompt">Name your camera, e.g. Living room</string>
    <string name="add_device_password_prompt">Initial Password can be found on the back side of the camera or on user manual.\n\nIn case you have already changed the initial password, e.g. this camera was already configured on another smartphone/tablet, please input the new password.</string>
    <string name="add_finish">HiKam Camera is connected to your WiFi and added to the camera list successfully. Now you can:</string>
    <string name="add_item_warm1">Only</string>
    <string name="add_item_warm2">alarm accounts can be added</string>
    <string name="add_manual_tips">add an already configured camera</string>
    <string name="add_more">Loading more</string>
    <string name="add_new_camera">configure a new camera</string>
    <string name="add_one_more">Add another camera</string>
    <string name="add_success">Add Successfully</string>
    <string name="added">Added</string>
    <string name="admin_description">1. With admin accout one can access the vedio monitoring and do all the setups. Guest accout can only view the vedio monitoring.</string>
    <string name="ago_d">day ago</string>
    <string name="ago_h">hour ago</string>
    <string name="ago_m">min ago</string>
    <string name="ago_n">now</string>
    <string name="ago_s">s ago</string>
    <string name="airlink_connect_failed_info">AirLink Timeout</string>
    <string name="airlink_connect_failed_info_1">Please check the conditions mentioned at the beginning and try again.</string>
    <string name="airlink_connect_failed_info_2">If still cannot work, please contact us:\n\thttp://supportus.hi-kam.com\n\tEmail: service.us@hi-kam.com</string>
    <string name="airlink_connect_failed_info_3">We will help you within the next hours.</string>
    <string name="airlink_run">AirLink is running</string>
    <string name="airlink_title_electricity">2. Power on</string>
    <string name="airlink_title_net_prepare">1. Preparation</string>
    <string name="airlink_title_wifi_pwd">3. Enter the WiFi Password</string>
    <string name="airlink_wifi_error">You are not connecting to a 2.4Ghz WiFi. Please switch to a 2.4Ghz WIFI.\n\nIf you are not sure about WIFI frequency, you can temporarily disable 5Ghz WiFi on your wireless router during camera setup. When camera setup is done, you can re-open the 5Ghz WiFi.</string>
    <string name="alarm_History">Alarm List</string>
    <string name="alarm_account">Alarm Account</string>
    <string name="alarm_control">Alarm Settings</string>
    <string name="alarm_demo">Motion Detection - 123456</string>
    <string name="alarm_email">Alarm Email</string>
    <string name="alarm_histroy">records</string>
    <string name="alarm_id_must_first_with_zero">Alarm push ID is your APP user ID</string>
    <string name="alarm_id_too_long">Alarm ID must be no more than 9 character</string>
    <string name="alarm_info">Alarm Info</string>
    <string name="alarm_infor">Alarm Information</string>
    <string name="alarm_input_switch">I/O Alarm Input</string>
    <string name="alarm_manager">Alarm Management</string>
    <string name="alarm_mask">Blocking List</string>
    <string name="alarm_mask_id_too_long">Camera ID length must be no more than 9 character</string>
    <string name="alarm_num_tip">new alarms are triggered !</string>
    <string name="alarm_out_switch">I/O Alarm Output</string>
    <string name="alarm_push_ethods">Alarm Push Style</string>
    <string name="alarm_push_limit">Alarm receive accounts has reached the maximum.</string>
    <string name="alarm_push_prompt">Push alarm notification to your smartphone.</string>
    <string name="alarm_record">Alarm logs</string>
    <string name="alarm_schedule">Alarm Schedule</string>
    <string name="alarm_set">Alarm Settings</string>
    <string name="alarm_switch">Alarm Push</string>
    <string name="alarm_time_interval">Alarm Interval(seconds)</string>
    <string name="alarm_timing">Alarm Schedule</string>
    <string name="alarm_timing_intro">Alarm is enabled during the giving peroid.\nAlarm is disabled outside the giving period.\nIn case no schedule is defined, the alarm follows Manual Activation/Deactivation.\nMaximal 3 alarm schedule is allowed.</string>
    <string name="album_all">ALL</string>
    <string name="all_tel">Camera list</string>
    <string name="allarm">Alarm</string>
    <string name="allarm_record">Alarm Info</string>
    <string name="allarm_ring">Alarm Ring</string>
    <string name="allarm_ring_selection">Alarm Ring Selection</string>
    <string name="allarm_robot">Camera:</string>
    <string name="allarm_type">Type:</string>
    <string name="allarm_type1">External sensor alarm</string>
    <string name="allarm_type2">Motion Detection</string>
    <string name="allarm_type3">Emergency alarm</string>
    <string name="allarm_type4">PIR Detection Alarm</string>
    <string name="allarm_type5">I/O alarm</string>
    <string name="allarm_type6">Low voltage alarm</string>
    <string name="already_init_passwd">Add Failed,the password already existed</string>
    <string name="ap_and_qr">AP Mode\nSmart Scan</string>
    <string name="ap_find_device">Have found the camera for you:</string>
    <string name="ap_mode">AP Mode</string>
    <string name="ap_not_find_device">No device found</string>
    <string name="ap_search">Searching...</string>
    <string name="ap_title_step1">Brief</string>
    <string name="ap_title_step2">1. Set the camera to AP mode</string>
    <string name="ap_title_step3">2. Connect your Smartphone to the AP</string>
    <string name="ap_title_step5">3. Add the camera</string>
    <string name="ap_title_step6">4. Switch to normal mode</string>
    <string name="app_name">HiKam</string>
    <string name="app_update_tips">Please update the HiKam app via Google Play to operate the camera.</string>
    <string name="bt_determine">Confirm</string>
    <string name="camara">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="check_fq">Check Solution</string>
    <string name="choose_wifi">network</string>
    <string name="connect_fail_remind">Connection failed</string>
    <string name="connect_failed_info">Smart Scan Timeout</string>
    <string name="connect_failed_info_1">Please check the conditions mentioned at the beginning and try again.</string>
    <string name="connect_failed_info_2">If still cannot work, please contact us:\n\thttp://supportus.hi-kam.com\n\tEmail: service.us@hi-kam.com</string>
    <string name="connect_failed_info_3">We will help you within the next hours.</string>
    <string name="gallery">Gallery</string>
    <string name="guide_widget_init_psd_str1">Please name your camera, e.g. living room</string>
    <string name="guide_widget_init_psd_str2">Please set a new camera password for your own protection. 6-30 characters (0-9, a-z, A-Z)</string>
    <string name="guide_widget_init_psd_str3">Please confirm the password again</string>
    <string name="guide_widget_init_psd_str4">Show the password</string>
    <string name="hear">Heard</string>
    <string name="imagedes"></string>
    <string name="input_device_password">Please input camera password</string>
    <string name="input_wifi_password">Please input WiFi (SSID) password</string>
    <string name="listenning1">If you hear sound out from camera like Dong,please tap Heard</string>
    <string name="listenning2">If you hear sound out from camera like Di-Di-Di,please tap Go back and re-enter device password</string>
    <string name="next">Next</string>
    <string name="no_hear">Go back</string>
    <string name="please_choose_wireless">Please connect your mobile phone to WIFI network first.</string>
    <string name="please_wait">Please wait…</string>
    <string name="reason">Possible cause</string>
    <string name="reason1">Your mobile device is not at the same LAN network with camera</string>
    <string name="reason2">Camera is unable to connect to WIFI</string>
    <string name="remind_align_camera">Place Smart Key facing to camera</string>
    <string name="remind_input_wifi_pwd">Notice that you need to verify the password for your WIFI</string>
    <string name="remind_input_wifi_pwd1">Please enter the password</string>
    <string name="remind_insert_infrared">Please insert Smart Key, and adjust the media sound to the highest level</string>
    <string name="remind_msg">Notice</string>
    <string name="smart_key_wifi">Set Wifi By Smart Key</string>
    <string name="try_again">Try again</string>
</resources>