<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:background="@drawable/remind" android:layout_width="UNKNOWN_DATA_0x11801" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="@color/text_color_black" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/airlink_connect_failed_info" />
    <TextView android:textColor="@color/text_color_black" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/airlink_connect_failed_info_1" />
    <TextView android:textColor="@color/text_color_black" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/airlink_connect_failed_info_2" />
    <TextView android:textColor="@color/text_color_black" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/airlink_connect_failed_info_3" />
    <Button android:textColor="@color/text_color_white" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/try_again" android:background="@drawable/hear" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginTop="20dp" android:layout_marginRight="32dp" android:text="@string/try_again" />
    <Button android:textColor="@color/text_color_white" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/check_fq" android:background="@drawable/hear" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginTop="20dp" android:layout_marginRight="32dp" android:layout_marginBottom="30dp" android:text="@string/check_fq" />
</LinearLayout>
