<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@drawable/remind_dialog" android:layout_width="UNKNOWN_DATA_0xf001" android:layout_height="UNKNOWN_DATA_0xa001" android:layout_marginTop="60dp">
    <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/text_color_black" android:id="@+id/tv_remind" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remind_msg" android:layout_centerHorizontal="true" />
    <ImageView android:id="@+id/img_remind" android:background="@drawable/remind_line" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/tv_remind" />
    <TextView android:textColor="@color/text_color_red" android:id="@+id/tv_input_wifi_pwd1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/remind_input_wifi_pwd" android:layout_below="@+id/img_remind" android:layout_centerHorizontal="true" />
    <TextView android:textColor="@color/text_color_red" android:id="@+id/tv_input_wifi_pwd2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remind_input_wifi_pwd1" android:layout_below="@+id/tv_input_wifi_pwd1" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/text_color_white" android:id="@+id/bt_determine" android:background="@drawable/hear" android:layout_width="UNKNOWN_DATA_0x7f050051" android:layout_height="UNKNOWN_DATA_0x7f050050" android:text="@string/bt_determine" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>
