<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/layout_total" android:background="@drawable/main_bg" android:layout_width="match_parent" android:layout_height="match_parent"
    <RelativeLayout android:orientation="vertical" android:id="@+id/layout_title" android:background="@drawable/tab_bar" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f050124">
        <ImageView android:id="@+id/img_back" android:background="@drawable/img_back" android:layout_width="UNKNOWN_DATA_0x1e01" android:layout_height="UNKNOWN_DATA_0x1e01" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/title_text_size" android:textStyle="bold" android:textColor="@color/text_color_white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/smart_key_wifi" android:layout_toRightOf="@+id/img_back" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/input_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/item_left_right_margin" android:layout_marginTop="@dimen/item_group_margin_top" android:layout_marginRight="@dimen/item_left_right_margin" android:layout_below="@+id/layout_title">
        <RelativeLayout android:id="@+id/current_wifi" android:background="@drawable/tiao_bg_up" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f05010d">
            <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/text_color_black" android:id="@+id/tv_wifi_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/please_choose_wireless" android:layout_centerVertical="true" />
            <Button android:textSize="@dimen/text_size_small" android:textColor="@color/white" android:id="@+id/choose_wifi" android:background="@drawable/choose_network" android:layout_width="UNKNOWN_DATA_0x7f05004f" android:layout_height="UNKNOWN_DATA_0x7f05004e" android:layout_marginRight="@dimen/inner_margin_right" android:text="@string/choose_wifi" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/imagedes" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/layout_input_wifi_password" android:background="@drawable/tiao_bg_center" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f05010d">
            <EditText android:textSize="@dimen/text_size_edit" android:textColor="@color/text_color" android:id="@+id/input_wifi_password" android:background="#00000000" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp" android:text="" android:hint="@string/input_wifi_password" android:maxLength="32" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/layout_input_device_password" android:background="@drawable/tiao_bg_bottom" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f05010d">
            <EditText android:textSize="@dimen/text_size_edit" android:textColor="@color/text_color" android:id="@+id/input_device_password" android:background="#00000000" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp" android:text="" android:hint="@string/input_device_password" android:maxLength="9" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="60dp" android:layout_marginTop="@dimen/item_group_margin_top" android:layout_marginRight="60dp" android:layout_below="@+id/input_password">
        <Button android:textSize="@dimen/text_size_normal" android:textColor="@color/text_color_white" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/next" android:background="@drawable/next" android:layout_width="UNKNOWN_DATA_0x7f050056" android:layout_height="UNKNOWN_DATA_0x7f050055" android:text="@string/next" />
    </LinearLayout>
    <RelativeLayout android:id="@+id/remind_insert_infrared" android:background="@drawable/remind" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x10401" android:layout_height="UNKNOWN_DATA_0x14001" android:layout_centerInParent="true">
        <ImageView android:id="@+id/img_insert_infrared" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/insert" />
        <TextView android:textColor="@color/text_color_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remind_insert_infrared" android:layout_below="@+id/img_insert_infrared" />
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:id="@+id/remind_listener" android:background="@drawable/remind" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x10401" android:layout_height="UNKNOWN_DATA_0x14001" android:layout_centerInParent="true">
        <TextView android:textColor="@color/text_color_black" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/remind_align_camera" android:layout_alignParentTop="true" />
        <ImageView android:id="@+id/img_insert" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/insert" android:layout_below="@+id/textView1" />
        <ImageView android:id="@+id/anim_load" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/animation_loading" android:layout_below="@+id/img_insert" android:layout_centerHorizontal="true" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
            <Button android:background="@drawable/hear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hear" />
            <Button android:background="@drawable/hear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:text="@string/no_hear" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
