<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/rl_init_psd" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textColor="@color/black" android:id="@+id/tv1" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" android:text="@string/guide_widget_init_psd_str1" android:layout_below="@+id/img_connect" />
    <EditText android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="快点输入密码啊" />
    <TextView android:textColor="@color/black" android:id="@+id/tv2" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" android:text="@string/guide_widget_init_psd_str2" android:layout_below="@+id/img_connect" />
    <EditText android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="快点输入密码啊" />
    <TextView android:textColor="@color/black" android:id="@+id/tv3" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" android:text="@string/guide_widget_init_psd_str3" android:layout_below="@+id/img_connect" />
    <EditText android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="快点输入密码啊" />
    <TextView android:textColor="@color/black" android:id="@+id/tv4" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" android:text="@string/guide_widget_init_psd_str4" android:layout_below="@+id/img_connect" />
</LinearLayout>
